<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="25dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/einleitung"
        android:textSize="17dp"
        android:gravity="center"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="50dp"
        android:text="@string/guide_titel"
        android:textSize="15dp"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/guide_1"
        android:textSize="15dp"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/guide_2"
        android:textSize="15dp"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/guide_3"
        android:textSize="15dp"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/guide_4"
        android:textSize="15dp"
        android:id="@+id/textView7" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/start"
        android:text="@string/start"
        android:id="@+id/start_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>