<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl1"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_one"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl2"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_two"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl3"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_three"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl4"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_four"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl5"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_five"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl6"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_six"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl7"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_seven"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl8"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_eight"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zahl9"
            android:textSize="@dimen/level1_textsize"
            android:id="@+id/level1_nine"
            android:width="@dimen/level1_width"
            android:height="@dimen/level1_height"
            android:layout_row="2"
            android:layout_column="2" />

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom">

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="BACK"
            android:id="@+id/level1_back"
            android:background="@color/back"
            android:textColor="@color/white"
            android:layout_gravity="right|bottom"
            android:height="75dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="CHECK"
            android:id="@+id/level1_check"
            android:background="@color/check"
            android:textColor="@color/white"
            android:height="75dp"
            android:onClick="showPopup"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>